src/styles/components/_slideShow.scss
.slideShow {
    position: relative;
    overflow: hidden;
    border-radius: 25px;
    width: 100%;
    height: 255px;
   
    @include desktop-only {
        height: 415px;
        width: 100%;
    }

    
    img {

        width: 100%;
        height: 255px;
        object-fit: cover;

        object-position: center;
        
        @include desktop-only {
            height: 415px;
            width: 100%;
        }
    }

    .previousPicture {
        cursor: pointer;
        position: absolute;
        z-index: 1;
        left: 0;
        top: 0;
        height: 255px;
        width: 15%;

        @include desktop-only {
            height: 415px;
        }

        &::before {
            content: '';
            width: 13px;
            height: 13px;
            border-bottom: 3px solid #FFFFFF;
            border-right: 3px solid #FFFFFF;
            rotate: (135deg);
            position: absolute;
            z-index: 2;
            top: 48%;
            left: 25%;   

            @include desktop-only {
                top: 42%;
                left: 15%; 
                width: 60px;
                height: 60px;
                border-bottom: 10px solid #FFFFFF;
                border-right: 10px solid #FFFFFF;
            }
        }

        &:hover {
            background:  linear-gradient(to right, rgba(0, 0, 0, 0.699), rgba(255, 255, 255, 0));
            border-radius: 25px 0 0 25px;
        }
    }

    .nextPicture {
        cursor: pointer;
        position: absolute;
        z-index: 1;
        right: 0;
        top: 0;
        height: 255px;
        width: 15%;

        @include desktop-only {
            height: 415px;
        }

        &::after {
            content: '';
            width: 13px;
            height: 13px;
            border-bottom: 3px solid #FFFFFF;
            border-right: 3px solid #FFFFFF;
            rotate: (315deg);
            position: absolute;
            z-index: 2;
            top: 48%;
            right: 25%;   

            @include desktop-only {
                top: 42%;
                right: 15%; 
                width: 60px;
                height: 60px;
                border-bottom: 10px solid #FFFFFF;
                border-right: 10px solid #FFFFFF;
            }
        }

        &:hover {
            background:  linear-gradient(to left, rgba(0, 0, 0, 0.699), rgba(255, 255, 255, 0));
            border-radius: 0 25px 25px 0;
        }
    }

    .numberOfPicture {
        color: #FFFFFF;
        position: absolute;
        z-index: 2;
        left: 50%;
        right: 50%;
        bottom: 25px;
        text-shadow: 1px 1px 2px black, #000 0 0 10px;
    }

    .current {
        position: relative;
        z-index: 0;
    
    }
    
    .previous {
        position: absolute;
        z-index: 0;
        top: 0;
        left: 0;
        animation:  slideIn 500ms ease-out forwards;
    }
    
    .next {
        position: absolute;
        z-index: 0;
        top: 0;
        left: 0;
    
        animation:  slideOut 500ms ease-out forwards;
    }    
}

